# ecom-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
proto/ecom_agent/v1/: agent.proto  ecom_env.proto
scripts/: check_string_line_continuations.py
src/ecom_agent/: __init__.py  config.py  health.py  observability.py  runtime_channel.py  server.py  service.py
src/ecom_agent/agent/: core.py  env_client.py  llm.py  openai_llm.py  runtime_client.py
src/ecom_agent/agent/sgr/: __init__.py  schemas.py  stages.py  tools.py
src/ecom_agent/v1/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  ecom_env_pb2.py  ecom_env_pb2.pyi  ecom_env_pb2_grpc.py
stub-package/: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_config.py  test_core.py  test_e2e.py  test_env_client.py  test_health.py  test_observability.py  test_openai_llm.py  test_runtime_channel.py  test_runtime_client.py  test_schemas.py  test_server.py  test_service.py  test_stages.py
